--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             Pádel UPM
           </a>
 
-          <!-- Hamburger menu -->
+          <!-- Hamburger menu (only mobile)-->
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#options">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -141,11 +141,11 @@
       </article>
     </section>
   </section>
+
   <footer class="container-fluid">
       <section class="row">
-            <span class="col-md-12 text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
+            <span class="col-md-12 text-center">Copyright Club de Pádel de la Escuela Politécnica de Madrid 2015.</span>
       </section>
-
   </footer>
 
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
