Arreglado footer. Registro responsive

--- a/login.html
+++ b/login.html
@@ -110,9 +110,9 @@ crossorigin="anonymous"/>
 </section>
 
 <footer class="container-fluid">
-  <section class="row">
-        <span class="col-md-12 text-center">Copyright Club de Pádel de la Escuela Politécnica de Madrid 2015.</span>
-  </section>
+    <section class="row">
+          <span class="col-md-12 text-center">© Club de Pádel de la Escuela Politécnica de Madrid 2015.</span>
+    </section>
 </footer>
 
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
