--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
   <footer class="container-fluid">
       <section class="row">
-            <span class="col-md-12 text-center">Copyright Club de Pádel de la Escuela Politécnica de Madrid 2015.</span>
+            <span class="col-md-12 text-center">© Club de Pádel de la Escuela Politécnica de Madrid 2015.</span>
       </section>
   </footer>
 
