--- a/registro.html
+++ b/registro.html
@@ -105,7 +105,7 @@
                         <input class="col-md-4 col-sm-4 col-xs-offset-1 col-xs-10" type="password" placeholder="Repita la clave"/>
                     </div>
                     <div class="row">
-                        <label class="col-md-2 col-md-offset-2 col-sm-5 col-xs-offset-1 col-xs-10 col-xs-offset-1 text-md-right text-xs-left">Fecha de nacimiento</label>
+                        <label class="col-md-2 col-md-offset-2 col-sm-5 col-xs-offset-1 col-xs-10 col-xs-offset-1 text-md-right text-xs-left">Fecha de nacimiento:</label>
                         <input class="col-md-4 col-sm-4 col-xs-offset-1 col-xs-10" type="date"/>
                     </div>
                     <div class="row">
