--- a/login.html
+++ b/login.html
@@ -88,21 +88,21 @@ crossorigin="anonymous"/>
     <form>
 
       <div class="row">
-          <label class="col-md-5 text-right">Usuario:</label>
-          <input class="col-md-4" type="text" placeholder="Identificador de usuario"/>
+          <label class="col-md-2 col-md-offset-2 col-sm-5 col-xs-offset-1 col-xs-10 col-xs-offset-1 text-md-right text-xs-left">Usuario:</label>
+          <input class="col-md-4 col-sm-4 col-xs-offset-1 col-xs-10" type="text" placeholder="Identificador de usuario"/>
       </div>
 
       <div class="row">
-          <label class="col-md-5 text-right">Correo:</label>
-          <input class="col-md-4" type="email" placeholder="Email"/>
+          <label class="col-md-2 col-md-offset-2 col-sm-5 col-xs-offset-1 col-xs-10 col-xs-offset-1 text-md-right text-xs-left">Correo:</label>
+          <input class="col-md-4 col-sm-4 col-xs-offset-1 col-xs-10" type="email" placeholder="Email"/>
       </div>
         <div class="row">
-          <label class="col-md-5 text-right">Clave:</label>
-          <input class="col-md-4" type="password" placeholder="Clave"/>
+          <label class="col-md-2 col-md-offset-2 col-sm-5 col-xs-offset-1 col-xs-10 col-xs-offset-1 text-md-right text-xs-left">Clave:</label>
+          <input class="col-md-4 col-sm-4 col-xs-offset-1 col-xs-10" type="password" placeholder="Clave"/>
         </div>
 
         <div class="row">
-          <input class="col-md-offset-8 col-md-1 col-sm-offset-8 col-sm-1 col-xs-offset-3 col-xs-6" type="submit"/ value="Entrar">
+          <input class="col-md-offset-8 col-md-1 col-sm-offset-7 col-sm-2 col-xs-offset-1 col-xs-10" type="submit"/ value="Entrar">
         </div>
     </form>
   </div>
