--- a/index.html
+++ b/index.html
@@ -2,158 +2,158 @@
 <html>
 <head>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
 
-  <title>Inicio - Pádel UPM</title>
+    <title>Inicio - Pádel UPM</title>
 
-  <link rel="stylesheet"
-  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
-  integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ=="
-  crossorigin="anonymous"/>
+    <link rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
+    integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ=="
+    crossorigin="anonymous"/>
 
-  <link rel="stylesheet"
-  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css"
-  integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX"
-  crossorigin="anonymous"/>
+    <link rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css"
+    integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX"
+    crossorigin="anonymous"/>
 
-  <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
 
 </head>
 <body>
 
-  <!-- Main menu -->
-  <menu>
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container-fluid">
+    <!-- Main menu -->
+    <menu>
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container-fluid">
 
-        <!-- Logo -->
-        <div class="navbar-header">
-          <a class="navbar-brand" href="index.html">
-            <img src="img/upm.jpg">
-            Pádel UPM
-          </a>
+                <!-- Logo -->
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="index.html">
+                        <img src="img/upm.jpg">
+                        Pádel UPM
+                    </a>
 
-          <!-- Hamburger menu (only mobile)-->
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#options">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+                    <!-- Hamburger menu (only mobile)-->
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#options">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
 
-        </div>
+                </div>
 
-        <!-- Options -->
-        <div id="options" class="collapse navbar-collapse">
+                <!-- Options -->
+                <div id="options" class="collapse navbar-collapse">
 
-          <!-- Left -->
-          <div class="navbar-left">
-            <ul class="nav navbar-nav">
-              <li class="active">
-                <a href="index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Inicio</a>
-              </li>
-              <li>
-                <a href="servicios.html"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span> Servicios</a>
-              </li>
-              <li>
-                <a href="instalaciones.html"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Instalaciones</a>
-              </li>
-              <li>
-                <a href="reservar.html"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Reservar</a>
-              </li>
-            </ul>
-          </div>
+                    <!-- Left -->
+                    <div class="navbar-left">
+                        <ul class="nav navbar-nav">
+                            <li class="active">
+                                <a href="index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Inicio</a>
+                            </li>
+                            <li>
+                                <a href="servicios.html"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span> Servicios</a>
+                            </li>
+                            <li>
+                                <a href="instalaciones.html"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Instalaciones</a>
+                            </li>
+                            <li>
+                                <a href="reservar.html"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Reservar</a>
+                            </li>
+                        </ul>
+                    </div>
 
-          <!-- Right -->
-          <div class="navbar-right">
-            <ul class="nav navbar-nav">
-              <li>
-                <a href="registro.html"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Registro</a>
-              </li>
-              <li>
-                <a href="login.html"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> Login</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </nav>
-  </menu>
+                    <!-- Right -->
+                    <div class="navbar-right">
+                        <ul class="nav navbar-nav">
+                            <li>
+                                <a href="registro.html"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Registro</a>
+                            </li>
+                            <li>
+                                <a href="login.html"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> Login</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </menu>
 
-  <!-- Content -->
-  <section class="container">
+    <!-- Content -->
+    <section class="container">
 
-    <!-- Parallax header -->
-    <div class="parallax"></div>
-    <header class="jumbotron container">
-      <div class="row">
-        <img src="img/upm.jpg" class="col-md-2 col-sm-3 col-xs-6"/>
-        <div class="col-md-10 col-sm-9 col-xs-6">
-          <h1>Pádel UPM</h1>
-          <p class="lead">El club universitario más dinámico del circuito</p>
-        </div>
-      </div>
-    </header>
+        <!-- Parallax header -->
+        <div class="parallax index"></div>
+        <header class="jumbotron container">
+            <div class="row">
+                <img src="img/upm.jpg" class="col-md-2 col-sm-3 col-xs-6"/>
+                <div class="col-md-10 col-sm-9 col-xs-6">
+                    <h1>Pádel UPM</h1>
+                    <p class="lead">El club universitario más dinámico del circuito</p>
+                </div>
+            </div>
+        </header>
 
-    <!-- Text -->
-    <section class="row">
-      <article class="col-md-4 col-sm-4 col-xs-12">
-        <h2>Clases<br/><br/></h2>
-        <p class="lead justified">
-          El conjunto de monitores más cualificados se encargará de darte la formación en cuanto a técnica requerida en este deporte.
-          Las clases prácticas te permitirán interiorizar los movimientos como si fuesen naturales.
-        </p>
-        <br/>
-        <p class="lead justified">
-          Las clases colectivas convierten las clases en un espacio dinámico en el que jugar se convierte en una actividad placentera y divertida.
-        </p>
-        <br/>
-        <p class="text-center">
-          <img class="shady-circle" src="img/balls.jpg"/>
-        </p>
-      </article>
+        <!-- Text -->
+        <section class="row">
+            <article class="col-md-4 col-sm-4 col-xs-12">
+                <h2>Clases<br/><br/></h2>
+                <p class="lead justified">
+                    El conjunto de monitores más cualificados se encargará de darte la formación en cuanto a técnica requerida en este deporte.
+                    Las clases prácticas te permitirán interiorizar los movimientos como si fuesen naturales.
+                </p>
+                <br/>
+                <p class="lead justified">
+                    Las clases colectivas convierten las clases en un espacio dinámico en el que jugar se convierte en una actividad placentera y divertida.
+                </p>
+                <br/>
+                <p class="text-center">
+                    <img class="shady-circle" src="img/balls.jpg"/>
+                </p>
+            </article>
 
-      <article class="col-md-4 col-sm-4 col-xs-12">
-        <h2>Entrenamientos personalizados</h2>
-        <p class="lead justified">
-          Si te sientes un campeón, de verdad lo eres o simplemente quieres avanzar rápidamente en la técnica que rodea a este deporte te podemos configurar sesiones de entrenamiento a tu medida con un entrenador personal que se encargará de:
-        </p>
-        <br/>
-        <ul class="lead justified">
-          <li>Enseñarte la técnica adecuada para mejorar tus golpes.</li>
-          <li>Enseñarte a combinar la potencia con la técnica.</li>
-          <li>Mostrarte cómo mejorar el rendimiento en equipo.</li>
-          <li>Explicarte cómo utilizar la presión de los campeonatos en tu beneficio.</li>
-        </ul>
-      </article>
+            <article class="col-md-4 col-sm-4 col-xs-12">
+                <h2>Entrenamientos personalizados</h2>
+                <p class="lead justified">
+                    Si te sientes un campeón, de verdad lo eres o simplemente quieres avanzar rápidamente en la técnica que rodea a este deporte te podemos configurar sesiones de entrenamiento a tu medida con un entrenador personal que se encargará de:
+                </p>
+                <br/>
+                <ul class="lead justified">
+                    <li>Enseñarte la técnica adecuada para mejorar tus golpes.</li>
+                    <li>Enseñarte a combinar la potencia con la técnica.</li>
+                    <li>Mostrarte cómo mejorar el rendimiento en equipo.</li>
+                    <li>Explicarte cómo utilizar la presión de los campeonatos en tu beneficio.</li>
+                </ul>
+            </article>
 
-      <article class="col-md-4 col-sm-4 col-xs-12">
-        <h2>Campeonatos<br/><br/></h2>
-        <p class="lead justified">
-          El club organiza campeonatos periódicos en los que te puedes divertir al mismo tiempo que mejoras en el deporte.
-          Tenemos campeonatos de un día, de fin de semana y ligas regulares. Puedes participar en los torneos masculinos, femeninos y mixtos.
-        </p>
-        <br/>
-        <p class="text-center">
-          <img class="shady-circle" src="img/trophy.jpg"/>
-        </p>
+            <article class="col-md-4 col-sm-4 col-xs-12">
+                <h2>Campeonatos<br/><br/></h2>
+                <p class="lead justified">
+                    El club organiza campeonatos periódicos en los que te puedes divertir al mismo tiempo que mejoras en el deporte.
+                    Tenemos campeonatos de un día, de fin de semana y ligas regulares. Puedes participar en los torneos masculinos, femeninos y mixtos.
+                </p>
+                <br/>
+                <p class="text-center">
+                    <img class="shady-circle" src="img/trophy.jpg"/>
+                </p>
 
-      </article>
+            </article>
+        </section>
     </section>
-  </section>
 
-  <footer class="container-fluid">
-      <section class="row">
+    <footer class="container-fluid">
+        <section class="row">
             <span class="col-md-12 text-center">© Club de Pádel de la Escuela Politécnica de Madrid 2015.</span>
-      </section>
-  </footer>
+        </section>
+    </footer>
 
-  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"
-  integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ=="
-  crossorigin="anonymous">
-  </script>
-  <script src="js/parallax.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"
+    integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ=="
+    crossorigin="anonymous">
+    </script>
+    <script src="js/parallax.js"></script>
 
 </body>
 </html>
