--- a/instalaciones.html
+++ b/instalaciones.html
@@ -2,116 +2,116 @@
 <html>
 <head>
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
 
-<title>Instalaciones - Pádel UPM</title>
+    <title>Instalaciones - Pádel UPM</title>
 
-<link rel="stylesheet"
-href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
-integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ=="
-crossorigin="anonymous"/>
+    <link rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
+    integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ=="
+    crossorigin="anonymous"/>
 
-<link rel="stylesheet"
-href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css"
-integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX"
-crossorigin="anonymous"/>
+    <link rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css"
+    integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX"
+    crossorigin="anonymous"/>
 
-<link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
 
 </head>
 <body>
 
-<!-- Main menu -->
-<menu>
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
+    <!-- Main menu -->
+    <menu>
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container-fluid">
 
-            <!-- Logo -->
-            <div class="navbar-header">
-                <a class="navbar-brand" href="index.html">
-                    <img src="img/upm.jpg">
-                    Pádel UPM
-                </a>
+                <!-- Logo -->
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="index.html">
+                        <img src="img/upm.jpg">
+                        Pádel UPM
+                    </a>
 
-                <!-- Hamburger menu -->
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#options">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
+                    <!-- Hamburger menu -->
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#options">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
 
+                </div>
+
+                <!-- Options -->
+                <div id="options" class="collapse navbar-collapse">
+
+                    <!-- Left -->
+                    <div class="navbar-left">
+                        <ul class="nav navbar-nav">
+                            <li>
+                                <a href="index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Inicio</a>
+                            </li>
+                            <li>
+                                <a href="servicios.html"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span> Servicios</a>
+                            </li>
+                            <li class="active">
+                                <a href="instalaciones.html"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Instalaciones</a>
+                            </li>
+                            <li>
+                                <a href="reservar.html"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Reservar</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <!-- Right -->
+                    <div class="navbar-right">
+                        <ul class="nav navbar-nav">
+                            <li>
+                                <a href="registro.html"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Registro</a>
+                            </li>
+                            <li>
+                                <a href="login.html"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> Login</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
+        </nav>
+    </menu>
 
-            <!-- Options -->
-            <div id="options" class="collapse navbar-collapse">
+    <!-- Content -->
+    <section class="container">
+        <section class="panel panel-default">
+            <div class="panel-body container">
+                <h1>Instalaciones</h1>
+                <article class="row">
 
-                <!-- Left -->
-                <div class="navbar-left">
-                    <ul class="nav navbar-nav">
-                        <li>
-                            <a href="index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Inicio</a>
-                        </li>
-                        <li>
-                            <a href="servicios.html"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span> Servicios</a>
-                        </li>
-                        <li class="active">
-                            <a href="instalaciones.html"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Instalaciones</a>
-                        </li>
-                        <li>
-                            <a href="reservar.html"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Reservar</a>
-                        </li>
+                    <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12155.641688931142!2d-3.6304401!3d40.3886779!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x17812255cddaf648!2sCampus+Sur+UPM!5e0!3m2!1sen!2ses!4v1447178409522"
+                    class="map col-md-6 col-sm-6" height="450" frameborder="0" style="border:0" allowfullscreen>
+                </iframe>
+
+                <div class="col-md-5 col-sm-5 lead">
+                    <p>Disponemos de:</p>
+                    <ul>
+                        <li>4 pistas de cristal cubiertas.</li>
+                        <li>3 pistas de cistal semicubiertas.</li>
+                        <li>3 pistas de cemento exteriores.</li>
+                        <li>2 pistas de tenis.</li>
+                        <li>Vestuarios completos.</li>
+                        <li>Cafetería con terraza.</li>
                     </ul>
                 </div>
 
-                <!-- Right -->
-                <div class="navbar-right">
-                    <ul class="nav navbar-nav">
-                        <li>
-                            <a href="registro.html"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Registro</a>
-                        </li>
-                        <li>
-                            <a href="login.html"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> Login</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+            </article>
         </div>
-    </nav>
-</menu>
-
-<!-- Content -->
-<section class="container">
-    <section class="panel panel-default">
-        <div class="panel-body container">
-            <h1>Instalaciones</h1>
-            <article class="row">
-
-                <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12155.641688931142!2d-3.6304401!3d40.3886779!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x17812255cddaf648!2sCampus+Sur+UPM!5e0!3m2!1sen!2ses!4v1447178409522"
-                class="map col-md-6" height="450" frameborder="0" style="border:0" allowfullscreen>
-            </iframe>
-
-            <div class="col-md-5 lead">
-                <p>Disponemos de:</p>
-                <ul>
-                    <li>4 pistas de cristal cubiertas.</li>
-                    <li>3 pistas de cistal semicubiertas.</li>
-                    <li>3 pistas de cemento exteriores.</li>
-                    <li>2 pistas de tenis.</li>
-                    <li>Vestuarios completos.</li>
-                    <li>Cafetería con terraza.</li>
-                </ul>
-            </div>
-
-        </article>
-    </div>
-</section>
+    </section>
 </section>
 
 <footer class="container-fluid">
     <section class="row">
-          <span class="col-md-12 text-center">© Club de Pádel de la Escuela Politécnica de Madrid 2015.</span>
+        <span class="col-md-12 text-center">© Club de Pádel de la Escuela Politécnica de Madrid 2015.</span>
     </section>
 </footer>
 
