--- a/servicios.html
+++ b/servicios.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
 
-    <title>Login - Pádel UPM</title>
+    <title>Servicios - Pádel UPM</title>
 
     <link rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
@@ -34,7 +34,7 @@
                         Pádel UPM
                     </a>
 
-                    <!-- Hamburger menu -->
+                    <!-- Hamburger menu (only mobile)-->
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#options">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -52,7 +52,7 @@
                             <li>
                                 <a href="index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Inicio</a>
                             </li>
-                            <li>
+                            <li class="active">
                                 <a href="servicios.html"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span> Servicios</a>
                             </li>
                             <li>
@@ -70,7 +70,7 @@
                             <li>
                                 <a href="registro.html"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Registro</a>
                             </li>
-                            <li class="active">
+                            <li>
                                 <a href="login.html"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> Login</a>
                             </li>
                         </ul>
@@ -82,30 +82,57 @@
 
     <!-- Content -->
     <section class="container">
-        <section class="panel panel-default">
-            <div class="panel-body">
-                <h1>Acceso: Usuario o correo</h1>
-                <form>
 
-                    <div class="row">
-                        <label class="col-md-1 col-md-offset-3 col-sm-5 col-xs-offset-1 col-xs-10 col-xs-offset-1 text-md-right text-xs-left">Usuario:</label>
-                        <input class="col-md-4 col-sm-4 col-xs-offset-1 col-xs-10" type="text" placeholder="Identificador de usuario"/>
-                    </div>
-
-                    <div class="row">
-                        <label class="col-md-1 col-md-offset-3 col-sm-5 col-xs-offset-1 col-xs-10 col-xs-offset-1 text-md-right text-xs-left">Correo:</label>
-                        <input class="col-md-4 col-sm-4 col-xs-offset-1 col-xs-10" type="email" placeholder="Email"/>
-                    </div>
-                    <div class="row">
-                        <label class="col-md-1 col-md-offset-3 col-sm-5 col-xs-offset-1 col-xs-10 col-xs-offset-1 text-md-right text-xs-left">Clave:</label>
-                        <input class="col-md-4 col-sm-4 col-xs-offset-1 col-xs-10" type="password" placeholder="Clave"/>
-                    </div>
-
-                    <div class="row">
-                        <input class="col-md-offset-8 col-md-1 col-sm-offset-7 col-sm-2 col-xs-offset-1 col-xs-10" type="submit"/ value="Entrar">
-                    </div>
-                </form>
+        <!-- Parallax header -->
+        <div class="parallax servicios"></div>
+        <header class="jumbotron container">
+            <div class="row">
+                <div class="col-md-10 col-sm-9 col-xs-6">
+                    <h1>Servicios</h1>
+                    <p class="lead">Todo lo que necesitas para alcanzar tu máximo potencial</p>
+                </div>
             </div>
+        </header>
+
+        <!-- Text -->
+        <section class="row">
+            <article class="col-md-4 col-sm-4 col-xs-12">
+                <h2>Fisioterapeuta</h2>
+                <br/><br/>
+                <p class="lead justified">
+                    Profesional sanitario con formación universitaria. Sus competencias quedan recogidas en la Ley de Ordenación de Profesiones Sanitarias y dispone del título de Grado en Fisioterapia.
+                </p>
+                <p class="lead justified">
+                    Oferta los siguientes servicios:<br/>
+                    <ul class="lead justified">
+                        <li>Masajes relajantes</li>
+                        <li>Atención y prevención de lesiones</li>
+                        <li>Clases de pilates</li>
+                    </ul>
+                </p>
+            </article>
+
+            <article class="col-md-4 col-sm-4 col-xs-12">
+                <h2>Coach</h2>
+                <br/><br/>
+                <p class="lead justified">
+                    En el club contamos con un psicólogo especializado en motivación y actividades físicas que te ayudará a conseguir cualquier meta que te propongas.
+                </p>
+            </article>
+
+            <article class="col-md-4 col-sm-4 col-xs-12">
+                <h2>Nutricionista</h2>
+                <br/><br/>
+                <p class="lead justified">
+                    Nuestro experto en alimentación estará a tu disposición para cualquier consulta:
+                    <ul class="lead justified">
+                        <li>Estudios nutricionales</li>
+                        <li>Dietas a medida</li>
+                        <li>Especializado en deportistas de alto rendimiento</li>
+                    </ul>
+                </p>
+            </article>
+
         </section>
     </section>
 
@@ -120,6 +147,7 @@
     integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ=="
     crossorigin="anonymous">
     </script>
+    <script src="js/parallax.js"></script>
 
 </body>
 </html>
