--- a/reservar.html
+++ b/reservar.html
@@ -94,23 +94,19 @@
             </div>
         </header>
 
-        <form>
-
-            <div class="row">
-                <label class="col-md-1 col-sm-2 col-xs-3 col-xs-offset">Fecha: </label>
-                <input class="col-md-2 col-sm-4 col-xs-8" type="date"/>
-            </div>
-            <div class="row">
-                <button class="col-md-1 col-md-offset-2 col-sm-2 col-sm-offset-4 col-xs-10 col-xs-offset-1">Buscar</button>
-            </div>
+        <form class="form-inline">
+            <label for="fecha">Fecha: </label>
+            <input id="fecha" class="form-control" type="date"/>
+            <button class="form-control btn btn-primary">Buscar</button>
         </form>
+
     </section>
 </section>
 </section>
 
 <footer class="container-fluid">
     <section class="row">
-        <span class="col-md-12 text-center">© Club de Pádel de la Escuela Politécnica de Madrid 2015.</span>
+        <span class="col-md-12 text-center">© Club de Pádel de la Universidad Politécnica de Madrid 2015.</span>
     </section>
 </footer>
 
