--- a/login.html
+++ b/login.html
@@ -85,24 +85,21 @@
         <section class="panel panel-default">
             <div class="panel-body">
                 <h1>Acceso: Usuario o correo</h1>
-                <form>
-
-                    <div class="row">
-                        <label class="col-md-1 col-md-offset-3 col-sm-5 col-xs-offset-1 col-xs-10 col-xs-offset-1 text-md-right text-xs-left">Usuario:</label>
-                        <input class="col-md-4 col-sm-4 col-xs-offset-1 col-xs-10" type="text" placeholder="Identificador de usuario"/>
+                <form class="form-horizontal col-md-4 col-md-offset-4">
+                    <div class="form-group">
+                        <label for="usuario">Usuario:</label>
+                        <input id="usuario" class="form-control" type="text" placeholder="Identificador de usuario"/>
                     </div>
-
-                    <div class="row">
-                        <label class="col-md-1 col-md-offset-3 col-sm-5 col-xs-offset-1 col-xs-10 col-xs-offset-1 text-md-right text-xs-left">Correo:</label>
-                        <input class="col-md-4 col-sm-4 col-xs-offset-1 col-xs-10" type="email" placeholder="Email"/>
+                    <div class="form-group">
+                        <label for="correo">Correo:</label>
+                        <input id="correo" class="form-control" type="email" placeholder="Email"/>
                     </div>
-                    <div class="row">
-                        <label class="col-md-1 col-md-offset-3 col-sm-5 col-xs-offset-1 col-xs-10 col-xs-offset-1 text-md-right text-xs-left">Clave:</label>
-                        <input class="col-md-4 col-sm-4 col-xs-offset-1 col-xs-10" type="password" placeholder="Clave"/>
+                    <div class="form-group">
+                        <label for="clave">Clave:</label>
+                        <input id="clave" class="form-control" type="password" placeholder="Clave"/>
                     </div>
-
-                    <div class="row">
-                        <input class="col-md-offset-8 col-md-1 col-sm-offset-7 col-sm-2 col-xs-offset-1 col-xs-10" type="submit"/ value="Entrar">
+                    <div class="form-group">
+                        <input class="form-control btn btn-primary" type="submit"/ value="Acceder">
                     </div>
                 </form>
             </div>
@@ -111,7 +108,7 @@
 
     <footer class="container-fluid">
         <section class="row">
-            <span class="col-md-12 text-center">© Club de Pádel de la Escuela Politécnica de Madrid 2015.</span>
+            <span class="col-md-12 text-center">© Club de Pádel de la Universidad Politécnica de Madrid 2015.</span>
         </section>
     </footer>
 
