--- a/registro.html
+++ b/registro.html
@@ -85,48 +85,48 @@
         <section class="panel panel-default">
             <div class="panel-body">
                 <h1>Registro de usuario</h1>
-                <form>
-
-                    <div class="row">
-                        <label class="col-md-2 col-md-offset-2 col-sm-5 col-xs-offset-1 col-xs-10 col-xs-offset-1 text-md-right text-xs-left">Usuario:</label>
-                        <input class="col-md-4 col-sm-4 col-xs-offset-1 col-xs-10" type="text" placeholder="Identificador de usuario"/>
+                <form class="form-horizontal col-md-4 col-md-offset-4">
+                    <div class="form-group">
+                        <label for="usuario">Usuario:</label>
+                        <input id="usuario" class="form-control" type="text" placeholder="Identificador de usuario"/>
                     </div>
-
-                    <div class="row">
-                        <label class="col-md-2 col-md-offset-2 col-sm-5 col-xs-offset-1 col-xs-10 col-xs-offset-1 text-md-right text-xs-left">Correo:</label>
-                        <input class="col-md-4 col-sm-4 col-xs-offset-1 col-xs-10" type="email" placeholder="Email"/>
+                    <div class="form-group">
+                        <label for="correo">Correo:</label>
+                        <input id="correo" class="form-control" type="email" placeholder="Email"/>
                     </div>
-                    <div class="row">
-                        <label class="col-md-2 col-md-offset-2 col-sm-5 col-xs-offset-1 col-xs-10 col-xs-offset-1 text-md-right text-xs-left">Clave:</label>
-                        <input class="col-md-4 col-sm-4 col-xs-offset-1 col-xs-10" type="password" placeholder="Clave"/>
+                    <div class="form-group">
+                        <label for="clave">Clave:</label>
+                        <input id="clave" class="form-control" type="password" placeholder="Clave"/>
                     </div>
-                    <div class="row">
-                        <label class="col-md-2 col-md-offset-2 col-sm-5 col-xs-offset-1 col-xs-10 col-xs-offset-1 text-md-right text-xs-left">Repita clave:</label>
-                        <input class="col-md-4 col-sm-4 col-xs-offset-1 col-xs-10" type="password" placeholder="Repita la clave"/>
+                    <div class="form-group">
+                        <label for="repita-clave" >Repita clave:</label>
+                        <input id="repita-clave" class="form-control" type="password" placeholder="Repita la clave"/>
                     </div>
-                    <div class="row">
-                        <label class="col-md-2 col-md-offset-2 col-sm-5 col-xs-offset-1 col-xs-10 col-xs-offset-1 text-md-right text-xs-left">Fecha de nacimiento:</label>
-                        <input class="col-md-4 col-sm-4 col-xs-offset-1 col-xs-10" type="date"/>
+                    <div class="form-group">
+                        <label for="fecha">Fecha de nacimiento:</label>
+                        <input id="fecha" class="form-control" type="date"/>
                     </div>
-                    <div class="row">
-                        <input class="col-md-offset-8 col-md-1 col-sm-offset-7 col-sm-2 col-xs-offset-1 col-xs-10" type="submit"/ value="Registrar">
+                    <div class="form-group">
+                        <input class="form-control btn btn-primary" type="submit"/ value="Registrar">
                     </div>
                 </form>
             </div>
-        </section>
+
+        </div>
     </section>
+</section>
 
-    <footer class="container-fluid">
-        <section class="row">
-            <span class="col-md-12 text-center">© Club de Pádel de la Escuela Politécnica de Madrid 2015.</span>
-        </section>
-    </footer>
+<footer class="container-fluid">
+    <section class="row">
+        <span class="col-md-12 text-center">© Club de Pádel de la Universidad Politécnica de Madrid 2015.</span>
+    </section>
+</footer>
 
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"
-    integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ=="
-    crossorigin="anonymous">
-    </script>
+<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"
+integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ=="
+crossorigin="anonymous">
+</script>
 
 </body>
 </html>
