--- a/servicios.html
+++ b/servicios.html
@@ -138,7 +138,7 @@
 
     <footer class="container-fluid">
         <section class="row">
-            <span class="col-md-12 text-center">© Club de Pádel de la Escuela Politécnica de Madrid 2015.</span>
+            <span class="col-md-12 text-center">© Club de Pádel de la Universidad Politécnica de Madrid 2015.</span>
         </section>
     </footer>
 
