Reserva de pistas con Angular

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     <script src="controllers/LoginController.js"></script>
     <script src="controllers/RegistroController.js"></script>
     <script src="controllers/MenuController.js"></script>
+    <script src="controllers/ReservaController.js"></script>
 
 </body>
 </html>
